--- a/taig/trial.html
+++ b/taig/trial.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #1a5d1a;
-            --secondary-color: #2e8540;
+            --primary-color: #2e0cf0;
+            --secondary-color: #390ed3;
             --accent-color: #f8c146;
             --dark-color: #1a1a1a;
             --light-color: #f5f5f5;
