--- a/trial.html
+++ b/trial.html
@@ -795,10 +795,10 @@
                     <p><i class="fas fa-clock"></i> Monday - Friday: 8:00 AM - 5:00 PM</p>
                     
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                 </div>
                 
