--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #1a5d1a;
-            --secondary-color: #2e8540;
+            --primary-color: #520ffc;
+            --secondary-color: #3f0ef0;
             --accent-color: #f8c146;
             --dark-color: #1a1a1a;
             --light-color: #f5f5f5;
@@ -795,10 +795,10 @@
                     <p><i class="fas fa-clock"></i> Monday - Friday: 8:00 AM - 5:00 PM</p>
                     
                     <div class="social-icons">
-                        <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 
